# rabbitmq-mysql

./: Cargo.toml  LICENSE  Makefile  README.md  bench.py  docker-compose.yml
docker/init-mysql/: init.sql
go/: go.mod  go.sum  main.go
init/: definitions.json
src/: main.rs
