[package]
name = "rust-read-rabbit-save-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.3"
dotenvy = "0.15.7"
mysql_async = "0.33.0"
tokio = "1.36.0"

[profile.release]
codegen-units = 1
lto = "fat"
